# UA_BlackJack_Server

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  UA_BlackJack.proto  XDG_SESSION_ID=117682  build.py  build.sh  client  client.config  no_proxy.py  player.proto  spdlog使用说明.md  tags  temp  temp.cpp  客户端命令描述.md  房间接口说明.md  数据库接口说明.md
Client/: CMakeLists.txt  Client.cc  Client.h  Display.cc  Display.h  README.md  Rio.cc  Rio.h  Server-test.cc  UA_BlackJack.pb.h  client.config  client.pb.cc  client.pb.h  client.proto  out  test.cc
Client/grpc/: UA_BlackJack.pb.cc
Client/gtest/: CMakeLists.txt  client_test.cc
Client/include/: Client.h  Display.h  Rio.h  global.h
Client/src/: Client.cc  Display.cc  Rio.cc  main.cc
DBServer/: CMakeLists.txt  DBServerAsynImpl.h  DBService.cc  DBServiceAsynImpl.cc  DBServiceImpl.cc  DBServiceImpl.h  Database.cc  Database.h  Player.pb.cc  Player.pb.h  README.md  RedisService.cc  RedisService.h  RedisTest.cc  RedisTest.cpp  RequestParser.cc  RequestParser.h  UA_BlackJack.pb.cc  database.config  database.proto  nameFormat.cc  nameFormat.h
DBServer/Bench/: bench.cc
DBServer/benchGRPC/: bench.cc
DBServer/include/: CallData.h  DBServerAsynImpl.h  Database.h  RedisService.h  RequestParser.h  ThreadPool.h
DBServer/src/: CallData.cc  DBService.cc  DBServiceAsynImpl.cc  Database.cc  RedisService.cc  RequestParser.cc  nameFormat.cc
DBServer/test/: test_RedisService.cc  test_nameFormat.cc
GameServer/: CMakeLists.txt  README.md  buildProject.py  game.config  main.cc  run.txt
GameServer/inc/: ClientForDatebase.h  ClientForLobby.h  ClientForTestUser.h  ControlTcpServer.h  GameProcess.h  Player.h  Poker.h  ProgramProcess.h  Room.h  ServerAsync.h  ServiceCallback.h  ShuffledPokers.h  combat_typedef.h  server-asyn.h
GameServer/src/: ClientForDatebase.cc  ClientForLobby.cc  ClientForTestUser.cc  ControlTcpServer.cc  GameProcess.cc  MycondintonCo.cc  Player.cc  ProgramProcess.cc  Room.cc  ServerAsync.cc  ServiceCallback.cc  ShuffledPokers.cc  TcpServer.cc
Lobby/: BlockList.hpp  CMakeLists.txt  CallData.cc  CallData.h  Lobby.cc  Lobby.cpp  Lobby.h  LobbyService.cc  LobbyService.h  Parser.cc  Parser.h  Players.cc  Players.cpp  Players.h  RPCClient.cc  RPCClient.h  Room.cpp  Room.h  common.cmake  main.cc  test  test.cpp  testspdlog  testspdlog.cc
Lobby/Logs/: Lobby_log.txt
LobbyServer/: BlockList.hpp  CMakeLists.txt  CallData.cc  Lobby.cc  LobbyService.cc  LobbyService.h  Parser.cc  Players.h  README.md  RPCClient.cc  Room.cc  Room.h  main.cc
LobbyServer/config/: client.config  lobby.config
LobbyServer/grpc/: UA_BlackJack.grpc.pb.cc  UA_BlackJack.pb.h
LobbyServer/include/: BlockList.hpp  CallData.h  Lobby.h  LobbyService.h  Parser.h  Players.h  RPCClient.h  Room.h
LobbyServer/src/: CallData.cc  Lobby.cc  LobbyService.cc  Parser.cc  Players.cc  RPCClient.cc  Room.cc  main.cc
LobbyServer/stress_test/: CMakeLists.txt  Client  ProxyRPCClient.cc  ProxyRPCClient.h  client-asyn.cc  proxy_client.cc
Log/: CMakeLists.txt  LogStream.cpp  LogStream.h  Logger.cpp  Logger.h  ThisThread.cpp  ThisThread.h  Timestamp.cpp  Timestamp.h  Util.h  test.cpp
PlayerServer/: CMakeLists.txt  PlayerClientDB-syn.cc  PlayerClientDB-syn.h  PlayerClientDB-test copy.cc  PlayerServer-asyn.cc  PlayerServer-asyn.h  README.md  main.cc  player.proto  player_server.config
PlayerServer/grpc/: UA_BlackJack.pb.cc
PlayerServer/include/: PlayerClientDB-syn.h  PlayerServer-asyn.h
PlayerServer/include-feature/: PlayerClientDB-asyn.h
PlayerServer/src/: PlayerClientDB-syn.cc  PlayerServer-asyn.cc  main.cc
PlayerServer/src-feature/: PlayerClientDB-asyn.cc  PlayerServer-asyn.cc
PlayerServer/stress-test/: stress-test-asyn.cc  stress-test-syn-time.cc  stress-test-syn.cc
ProxyServer/: CMakeLists.txt  README.md  runproxy.sh  stopproxy.sh
ProxyServer/cmake/: libco-config.cmake
ProxyServer/config/: proxy.config  test.config
ProxyServer/include/: BlockingQueue.h  CircularBuffer.h  Client.h  ClientProxyProtocol.h  EventLoop.h  EventsSource.h  Notifyer.h  ProxyServer.h  Random.h  TcpConnection.h  TcpServer.h  Timer.h  asyncProxyServer.h  asyncServiceClient.h  common.h  log.h
ProxyServer/src/: CMakeLists.txt  CircularBuffer.cc  Client.cc  ClientProxyProtocol.cc  EventLoop.cc  EventsSource.cc  ProxyServer.cc  TcpConnection.cc  TcpServer.cc  main.cpp
ProxyServer/test/: CMakeLists.txt  Makefile  RpcServer.h  client.cpp  overAllTest.cpp  samples_lobby.txt  samples_player.txt  samples_room.txt  samples_social.txt  simpleBackEnd.cpp  testLogLevel  testLogLevel.cpp  testTimer  testTimer.cpp  test_logic.md  testlibco  testlibco.cpp
SocialServer/: CMakeLists.txt  README.md  SocialClientDB-syn.cc  SocialClientDB-syn.h  SocialServer-asyn.cc  SocialServer-asyn.h  UA_BlackJack.proto  main.cc  social.proto  social_server.config
SocialServer/alpha/: BlockingQueue.h  MUtex.h  SocialServer-asyn-alpha.cc  SocialServer-asyn-alpha.h
SocialServer/grpc/: UA_BlackJack.pb.h
SocialServer/include/: SocialClientDB-syn.h  SocialServer-asyn.h  global.h
SocialServer/src/: SocialClientDB-syn.cc  SocialServer-asyn.cc  main.cc
SocialServer/stress-test/: stress-test-asyn.cc  stress-test-syn-time.cc  stress-test-syn.cc
combat_client_demo/: CMakeLists.txt  client-asyn.cc  client-syn.cc  demo.proto  restartClient.cc  server-asyn.cc  server-syn.cc  testClinet.cc
combat_server/: CMakeLists.txt  Player  Poker  README.md  buildProject.py  clearProject.py  main  main.cc
combat_server/example/: example_create_delete_room.cc  example_game_single_play.cc
combat_server/inc/: AskForDatabaseRequest.h  AskForLobby.h  AskForUserRequest.h  ClientForDatebase.h  ClientForLobby.h  ClientForTestUser.h  GameProcess.h  MycondintonCo.h  Player.h  Poker.h  Room.h  ShuffledPokers.h  combat_typedef.h  server-asyn.h
combat_server/src/: AskForDatabaseRequest.cc  AskForLobby..cc  AskForUserRequest.cc  ClientForDatebase.cc  ClientForLobby.cc  Player.cc  (+7 more)
proxy/: CMakeLists.txt  Makefile  README.md  common.cmake  dev_notes.md  grpc.cmake  proxy  proxy.cpp  tags
tmp/: CMakeLists.txt  log.h  test.cpp
(+130 files in other folders)
