cmake_minimum_required(VERSION 3.5.1)

project(UA_BLACKJACK_SERVER C CXX)

set(CMAKE_CXX_STANDARD 11)

include(cmake/common.cmake)

option(LOBBY "build lobby server or not (ON/OFF)" OFF)
option(DATABASE "build database server or not (ON/OFF)" OFF)
option(SOCIAL "build social server or not (ON/OFF)" OFF)
option(PLAYER "build player server or not (ON/OFF)" OFF)
option(GAME "build game server or not (ON/OFF)" OFF)
option(CLIENT "build client or not (ON/OFF)" OFF)
option(PROXY "build proxy server or not (ON/OFF)" OFF)
option(ENABLE_TEST "build test or not (ON/OFF)" OFF)
 
set(BUILD_ARGS LOBBY DATABASE SOCIAL PLAYER GAME CLIENT PROXY)
set(BUILD_ALL ON)
foreach(arg IN LISTS BUILD_ARGS)
    if(${arg})
        message(STATUS "bulid_all off")
        set(BUILD_ALL OFF)
    endif()
endforeach()

if (BUILD_ALL)
    add_subdirectory(ProxyServer "${CMAKE_CURRENT_BINARY_DIR}/proxy")
    add_subdirectory(LobbyServer "${CMAKE_CURRENT_BINARY_DIR}/lobby")
    add_subdirectory(SocialServer "${CMAKE_CURRENT_BINARY_DIR}/social")
    add_subdirectory(GameServer "${CMAKE_CURRENT_BINARY_DIR}/game")
    add_subdirectory(PlayerServer "${CMAKE_CURRENT_BINARY_DIR}/player")
    add_subdirectory(DBServer "${CMAKE_CURRENT_BINARY_DIR}/database")
    add_subdirectory(Client "${CMAKE_CURRENT_BINARY_DIR}/client")
elseif(LOBBY)
    add_subdirectory(LobbyServer "${CMAKE_CURRENT_BINARY_DIR}/lobby")
elseif(DATABASE)
    add_subdirectory(DBServer "${CMAKE_CURRENT_BINARY_DIR}/database")
elseif(SOCIAL)
    add_subdirectory(SocialServer "${CMAKE_CURRENT_BINARY_DIR}/social")
elseif(PLAYER)
    add_subdirectory(PlayerServer "${CMAKE_CURRENT_BINARY_DIR}/player")
elseif(GAME)
    add_subdirectory(GameServer "${CMAKE_CURRENT_BINARY_DIR}/game")
elseif(CLIENT)
    add_subdirectory(Client "${CMAKE_CURRENT_BINARY_DIR}/client")
elseif(PROXY)
    add_subdirectory(ProxyServer "${CMAKE_CURRENT_BINARY_DIR}/proxy")
endif()